--- a/PAUP_QA-master/QA/bin/QA.dll.config
+++ b/PAUP_QA-master/QA/bin/QA.dll.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="BazaDbContext" connectionString="server=localhost;port=3306;Database=paup_app;Uid=paup_app;Pwd=paup2020; CharSet=utf8;convert zero datetime=True" providerName="MySql.Data.MySqlClient" />
+    <add name="BazaDbContext" connectionString="server=localhost;port=3306;Database=qbox_db;Uid=paup_app;Pwd=paup2020; CharSet=utf8;convert zero datetime=True" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
